# ness-cpp

./: .gitignore  CMakeLists.txt
includes/: SDL_include.h  entity.h  game.h  inputmanager.h  resources.h  sprite.h
src/: component.cpp  component.h  engine.cpp  engine.h  entity.cpp  entity.h  game.cpp  inputmanager.cpp  ness.cpp  resources.cpp  texture.cpp  texture.h  tile.h
tests/: test.cpp
